welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:3: error: not found: value num
  var max=num(0);
          ^