welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int =
{
  var max=num(0);
  var index=0
  
  for(i <- 0 to nums.length-1)
  {
    if(nums(i)>max)
    {
      max=nums(i)
      index=i
    }
  }
  return index
}